# llmbuilder-package

./: .gitignore  CLI.md  CONTRIBUTING.md  MANIFEST.in  MIGRATION.md  NON_TECH_README.md  README.md  build_docs.bat  custom_config.json  deploy_docs.bat  deploy_vercel.bat  mkdocs.yml  pyproject.toml  serve_docs.bat  setup.py  test_docs.py  tokenizer_training_data.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: docs.yml
docs/: README.md  index.md  requirements.txt  train_model.py
docs/api/: core.md  data-processing.md
docs/cli/: overview.md
docs/development/: code-style.md  setup.md  testing.md
docs/examples/: basic-training.md
docs/getting-started/: first-model.md  installation.md  quickstart.md
docs/reference/: faq.md  migration.md  model-card-template.md
docs/user-guide/: advanced-data-processing.md  configuration.md  data-processing.md  export.md  fine-tuning.md  generation.md  tokenization.md  training.md
examples/: README.md  generate_text.py  train_example.py  train_tiny.py
examples/data/: sample_data.txt
llmbuilder/: __init__.py  __main__.py  cli.py  pipeline.py
llmbuilder/config/: __init__.py  defaults.py  loader.py  manager.py  validation.py
llmbuilder/config/templates/: advanced_processing_config.json  basic_config.json  cpu_optimized_config.json  inference_optimized_config.json  large_scale_config.json
llmbuilder/data/: __init__.py  cleaner.py  dataset.py  dedup.py  ingest.py  loader.py  pdf_processor.py
llmbuilder/export/: __init__.py  gguf.py  onnx.py  quant.py
llmbuilder/finetune/: __init__.py  finetune.py
llmbuilder/inference/: __init__.py  cli.py  generate.py
llmbuilder/model/: __init__.py  builder.py  gpt.py
llmbuilder/tokenizer/: __init__.py  train.py  utils.py  utils_backup.py
llmbuilder/tools/: __init__.py  convert_to_gguf.py
llmbuilder/training/: __init__.py  train.py  train_tokenizer.py  utils.py
llmbuilder/utils/: __init__.py  checkpoint.py  device.py  logger.py
scripts/: setup_dev.py
site/: .vercelignore  404.html  index.html  objects.inv  requirements.txt  sitemap.xml
site/api/: core.html
site/api/core/: index.html
site/api/data-processing/: index.html
site/cli/: overview.html
site/cli/overview/: index.html
site/contributing/testing-guidelines/: index.html
site/development/code-style/: index.html
site/development/setup/: index.html
site/development/testing/: index.html
site/examples/: basic-training.html
site/getting-started/: first-model.html  installation.html  quickstart.html
site/getting-started/CLI/: index.html
site/getting-started/first-model/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/reference/: faq.html  migration.html
site/reference/faq/: index.html
site/reference/migration/: index.html
site/reference/model-card-template/: index.html
site/search/: search_index.json
site/user-guide/: configuration.html  data-processing.html  export.html  fine-tuning.html  generation.html  tokenization.html  training.html
site/user-guide/advanced-data-processing/: index.html
site/user-guide/configuration/: index.html
site/user-guide/data-processing/: index.html
site/user-guide/export/: index.html
site/user-guide/fine-tuning/: index.html
site/user-guide/generation/: index.html
site/user-guide/tokenization/: index.html
site/user-guide/training/: index.html
